--- a/config.yml
+++ b/config.yml
@@ -1,33 +1,35 @@
 # @author DieFriiks / CustomCraftDev / undeaD_D
 # @link www.custom-craft.de
-# @github: https://github.com/CustomCraftDev/randomgive
+# @github https://github.com/CustomCraftDev/randomgive
 
 items:
 - DIRT:64
 - CHAINMAIL_LEGGINGS:1
 - GREEN_RECORD:1
 - SPONGE:999999
+
 message:
-  line1: -- Randomgive ---------------
-  line2: $PlayerName$ got $ItemAmount$ $ItemName$.
-  line3: -- by undeaD_D --------------
+  line1: '-- Randomgive ---------------'
+  line2: '    [$World$] $PlayerName$ got $ItemAmount$ $ItemName$.'
+  line3: '-- by UndeaD_D --------------'
   color1: YELLOW
   color2: WHITE
   color3: YELLOW
   
-
 config-infos:
-  info0: dont leave color or line blank !!!
+  info0: dont leave any line blank !!!
   info1: colors -> http://jd.bukkit.org/rb/apidocs/org/bukkit/ChatColor.html
   info2: items -> http://jd.bukkit.org/dev/apidocs/org/bukkit/Material.html
-  info3: $vars$ can only be used once per line !!!
-  info4: $NONE$ -> if line is not needed
-  info5: $PlayerName$ -> name of player
+  info3: $NONE$ -> if line is not needed
+  info4: $PlayerName$ -> name of player
+  info5: $World$ -> name of world
   info6: $ItemName$ -> itemname
   info7: $ItemAmount$ -> amount
+  
 command-infos:
   rgive: everyone
   rreload: op only
   rdisable: op only
   rreset: op only
+  
 debug: false
